# electron-quick-start

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  index.html  package.json  tsconfig.json
main/: BUILD.bazel  helper.ts  index.ts
renderer/: BUILD.bazel  app.css  index.tsx  people.css  people.tsx
