load("@npm//@bazel/typescript:index.bzl", "ts_config")
load("@npm//electron:index.bzl", "electron")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

electron(
    name = "app",
    args = [
        "main/index.js",
    ],
    data = [
        "index.html",
        "//main:lib",
        "//renderer:css",
        "//renderer:lib",
    ],
    tags = ["ibazel_notify_changes"],
)
