load("@npm//@bazel/typescript:index.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

SRCS = glob(
    [
        "**/*.ts",
        "**/*.tsx",
    ],
)

SRC_DEPS = [
    "@npm//react",
    "@npm//react-dom",
    "@npm//@types/react",
    "@npm//@types/react-dom",
]

ts_library(
    name = "lib",
    srcs = SRCS,
    tsconfig = "//:tsconfig",
    deps = SRC_DEPS,
)
