load("@npm//@bazel/typescript:index.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

SRCS = glob(
    [
        "**/*.ts",
        "**/*.tsx",
    ],
)

SRC_DEPS = [
    "@npm//react",
    "@npm//react-dom",
    "@npm//@types/react",
    "@npm//@types/react-dom",
    "@npm//@types/node",
]

ts_library(
    name = "lib",
    srcs = SRCS,
    devmode_module = "commonjs",
    devmode_target = "es2018",
    tsconfig = "//:tsconfig",
    deps = SRC_DEPS,
)

CSS_SRCS = glob([
    "**/*.css",
])

filegroup(
    name = "css",
    srcs = CSS_SRCS,
)
